# Super-Party-Jam

./: .gitignore  README.md  SonicPartyJam.code-workspace  project.godot  spj.code-workspace
client/: build.js  gdimport.js  index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/: App.svelte  Login.svelte  app.css  app.html  main.ts
client/src/games/: loader.ts
client/src/lib/: SPJClient.svelte.ts  SPJModule.ts  UrlUtil.ts
client/src/routes/: +layout.svelte
ext/controller/: package-lock.json  package.json  svelte.config.js  vite.config.ts
ext/controller/static/: main.css
ext/spjlib/: Cargo.toml
game/: .gitignore  Sonic Party Jam.csproj  Sonic Party Jam.sln  export_presets.cfg  icon.svg.import  project.godot
game/assets/icons/: dots-vertical.svg.import
game/assets/lib/: SPJLib.gdextension
game/assets/nodes/: SPJButton.cs  SPJButton.gd
game/assets/resources/: Theme.tres  polkadot.gdshader
game/assets/sfx/: cancel.wav.import  cursor.wav.import  desktop.ini  dialog.wav.import  join.wav.import  select.wav.import  start.wav.import  (+1 more)
game/global/: SPJ.cs  SPJHelpers.cs  SPJMeta.cs  SPJMeta.gd  SPJMeta.tscn  SPJModuleMetadata.gd  helpers.gd
game/scenes/: Main.gd  SPJ.cs
game/scripts/: helpers.gd  modulemanager.gd
game/server/: Handlers.cs  SPJClient.cs  SPJGameServer.cs  SPJHttpServer.cs  SPJModule.cs  SPJPlayer.cs  module.gd  websocket.gd
games/dice/: Dice.gd  DiceProfile.tscn  root.tscn
scenes/: Main.tscn
scripts/: helpers.gd
server/: client.gd  http.gd  player.gd  websocket.gd
spjlib/src/: lib.rs
(+94 files in other folders)
