[package]
name = "spj-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { git = "https://github.com/godot-rust/gdext", branch = "master" }
local-ip-address = "0.6.1"
qrcode = { version = "0.11", default-features = false }
